--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h2>Getting Started</h2>
 
 <h3>Installation</h3>
-<p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the paged.polyfill.js library either from <a href="https://www.pagedjs.org/documentation/releases/">here</a> or by linking to it directly via:</p>
+<p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either from by hosting locally or by linking to it directly:</p>
 
 <code><pre>
 &lt;script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"&gt;&lt;/script&gt;
