--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
 	<h3 class="cover-header no-counter">An Example Repo by Ashok Khanna</h3>
-	<h3 class="cover-header no-counter">March 2021</h3>
+	<h3 class="cover-header no-counter">April 2021</h3>
 </div>
 
 <!-- 2.0 Table of Contents -->
@@ -42,7 +42,7 @@
 <!-- 3.0 Start of Main Content -->
 
 <!-- Setting the footer -->
-<p class="footer">Most of this is copy/paste from paged.js</p>
+<p class="footer"><a href="">Return to Table of Contents</a></p>
 
 <!-- Reseting the header counters (as cover page also uses them) -->
 <div class="counter-reset"></div>
@@ -64,7 +64,7 @@
 <h2>Getting Started</h2>
 
 <h3>Installation</h3>
-<p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either from by hosting locally or by linking to it directly:</p>
+<p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either by hosting locally or linking to it directly:</p>
 
 <code><pre>
 &lt;script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"&gt;&lt;/script&gt;
@@ -98,69 +98,53 @@
 
 <h2>Basic Features</h2>
 
-<h3>Page Size</h3>
-<p>Most properties for our pages will be captured in CSS as an attribute to the <mark>@page</mark> rule. For example, we can set the page size to A4 with the following. Other valid page sizes include letter, legal, ledged, A0 to A7, A10, B4 and B5.</p>
 
-<figure>
-	<figcaption>CSS to Set A4 Page Size</figcaption>
-  <code><pre>
+<h3>Page Size</h3>
+<p>Most properties will be captured in CSS as an attribute to the <mark>@page</mark> rule. For example, we can set the page size to A4 with the following. Other valid page sizes include letter, legal, ledged, A0 to A7, A10, B4 and B5.</p>
+
+<code><pre>
 @page { size: A4; }
 </pre></code>
-</figure>
 
 <p>Portrait is the default orientation, but you print in landscape by using the following variation. Finally, you can custom page sizes as the second example below shows. This would be useful if you wanted to create PowerPoint widescreen format slides for example (190.5mm x 338.67mm).</p>
 
-<figure>
-	<figcaption>CSS to Set A4 Landscape</figcaption>
-  <code><pre>
+<code><pre>
 @page { size: A4 landscape; }
 </pre></code>
-</figure>
 
-<figure>
-	<figcaption>CSS to Set Custom Size</figcaption>
-  <code><pre>
+<code><pre>
 @page { size: 140mm 200mm; }
 </pre></code>
-</figure>
+
 
 <h3>Page Breaks</h3>
-<p>By default, Paged.js will determine how much content fills up a page and then insert page breaks at the overflow points. We can manually insert page breaks by creating a <mark>page-break</mark> class and setting its <mark>break-after</mark> property to <mark>page</mark>.</p>
+<p>By default, paged.js will determine how much content fills up a page and then insert page breaks at the overflow points. We can manually insert page breaks by creating a <mark>page-break</mark> class and setting its <mark>break-after</mark> property to <mark>page</mark>.</p>
 
-<figure>
-	<figcaption>CSS to Create Page Break Class</figcaption>
-  <code><pre>
+<code><pre>
 .page-break { break-after: page; }
 </pre></code>
-</figure>
 
-<p>We then simply have to add an empty page-break div in HTML at the points we want a page break.</p>
+<p>We then simply have to add an empty page-break div in HTML at the points we want a page break:</p>
 
-<figure>
-	<figcaption>HTML to insert page breaks</figcaption>
-  <code><pre>
+<code><pre>
 &lt;div class="page-break"&gt;&lt;/div&gt;
 </pre></code>
-</figure>
+
 
 <h3>Page Numbers</h3>
 <p>We can use CSS counters to add page numbers. The below CSS will add a page number to the bottom right of every page.</p>
 
-<figure>
-	<figcaption>CSS to Add Page Numbers</figcaption>
-  <code><pre>
+<code><pre>
 @page {
   	@bottom-right { content: counter(page); }
 }
 </pre></code>
-</figure>
+
 
 <h3>Basic Headers & Footers</h3>
-<p>The above page number example gives us a sneak peek into how we could add headers and footers. We can add these in six locations - top-left, top-center, top-right, bottom-left, bottom-center and of course bottom-right as above. Below are some basic examples of simple headers & footers, with the second example showing how we can increase the width in case we need to.</p>
+<p>The preceding page number example gives us a sneak peek into how we could add headers and footers. We can add these in six locations - top-left, top-center, top-right, bottom-left, bottom-center and of course bottom-right as before. Below are some basic examples of simple headers & footers, with the second example showing how we can increase the width in case we need to.</p>
 
-<figure>
-	<figcaption>CSS to Add Headers/Footers</figcaption>
-  <code><pre>
+<code><pre>
 @page {
 
 	@top-right {
@@ -173,7 +157,6 @@
     }
 }
 </pre></code>
-</figure>
 
 <h2>Advanced Features</h2>
 <h3>Automatic Counters</h3>
