--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <!-- 2.0 Table of Contents -->
-<div class="table-of-contents">
+<div class="table-of-contents" id="tocid">
 	<h1 class="toc-header">Table of Contents</h1>
 	<ol id="toc">
 <!-- toc.js will automatically insert TOC here -->
@@ -42,7 +42,7 @@
 <!-- 3.0 Start of Main Content -->
 
 <!-- Setting the footer -->
-<p class="footer"><a href="#toc">Return to Table of Contents</a></p>
+<p class="footer"><a href="#tocid">Return to Table of Contents</a></p>
 
 <!-- Reseting the header counters (as cover page also uses them) -->
 <div class="counter-reset"></div>
