--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </div>
 
 <!-- 2.0 Table of Contents -->
-<div class="table-of-contents" id="twista">
-	<h1 class="toc-header">Table of Contents</h1>
+<div class="table-of-contents">
+	<h1 class="toc-header" id="twista">Table of Contents</h1>
 	<ol id="toc">
 <!-- toc.js will automatically insert TOC here -->
 	</ol>
