--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@ In CSS:
 
 <p>Note that the value in the header will refer to the first instance of the <mark>string-set</mark> property within the page (i.e. if there are multiple &lt;h3&gt; tags on a page, only the first will be used to populate the header).</h3>
 
+<h2>Other Notes</h2>
+
 <h3>Table of Contents</h3>
+
 <p>The Paged.Js team wrote a <a href="https://www.pagedjs.org/posts/2020-02-19-toc/">great tutorial on adding table of contents</a> to our pages. The first step is to load <mark>toc.js</mark> in our example repo into our HTML file. We then need to add the following script in our HTML, after the call for pajed.js:</p>
 
 <code><pre>
@@ -322,7 +325,12 @@ class handlers extends Paged.Handler {
 
 <p>For some advanced formatting of our table of contents, refer to <mark>style.css</mark> in the example repo.</p>
 
-</div>
+<h3>Exporting to PDF</h3>
+
+<p>You can export your file to PDF using the browser's file > print option (selecting pdf as the printer). You want to select the print background option and delect the print headers & footers option.</p>
+
+
+
 
 <div class="page-break"></div>
 
