--- a/index.html
+++ b/index.html
@@ -329,7 +329,15 @@ class handlers extends Paged.Handler {
 
 <p>You can export your file to PDF using the browser's file > print option (selecting pdf as the printer). You want to select the print background option and delect the print headers & footers option.</p>
 
+<figure>
+<figcaption>Screenshot of Print Settings in Safari</figcaption>
+<img src="safari.png" />
+</figure>
 
+<figure>
+<figcaption>Screenshot of Print Settings in Chrome</figcaption>
+<img src="safari.png" />
+</figure>
 
 
 <div class="page-break"></div>
