--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ class handlers extends Paged.Handler {
 
 <figure>
 <figcaption>Screenshot of Print Settings in Chrome</figcaption>
-<img src="safari.png" />
+<img src="chrome.png" />
 </figure>
 
 
