--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@ class handlers extends Paged.Handler {
 <img src="chrome.png" />
 </figure>
 
+<div class="top-banner">
+	ASDF
+</div>
 
 <div class="page-break"></div>
 
