--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ class handlers extends Paged.Handler {
 <img src="chrome.png" />
 </figure>
 
-<div class="top-banner">
+<div class="banner-class">
 	ASDF
 </div>
 
