--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
 <p>HTML and CSS are beautiful languages and one of the landmark achievements of collaboration and the open web. Together, they allow you to create beautifully typeset digital content that can be viewed on any device, without any special software or paid licenses.</p>
 
-<p>The web however was developed for scrolling content, and not paged media (by which we mean discrete pages, like in print or pdf). Paged media, especially pdfs, remains an important medium of communication. There is something about having discrete pages, a feeling of stability and comfort that comes from a consistent layout (typically A4 or US Letter), reducing the cognitive tax when consuming new content.</p>
-
-<p>Unfortunately, whilst there are <a href="https://www.w3.org/TR/css-page-3/">W3C standards</a> on paged media, adoption by browsers has not been adequate to date. High quality paid alternatives exist in <a href="https://www.princexml.com">PrinceXML</a>, but a native, free solution has been missing.</p>
+<p>The web however was developed for scrolling content, and not paged media (by which we mean discrete pages, like in print or pdf). Unfortunately, whilst there are <a href="https://www.w3.org/TR/css-page-3/">W3C standards</a> on paged media, adoption by browsers has not been adequate to date. High quality paid alternatives exist in <a href="https://www.princexml.com">PrinceXML</a>, but a native, free solution has been missing.</p>
 
 <p>A <a href="https://news.ycombinator.com/item?id=26578826">happenstance discussion</a> on HackerNews brought my attention to <a href="https://www.pagedjs.org">paged.js</a>, a genius idea to polyfill the required capabilities to allow browsers to natively handle paged media, without having to build the whole rendering engine from scratch.</p>
 
 <p>This guide provides a basic tutorial to using paged.js, for my own future reference and yours, and I highly recommend you visiting their site and supporting their project. In particular, their <a href="https://www.pagedjs.org/documentation/05-designing-for-print/">documentation</a> covers many aspects of advanced paged media and is a worthwhile next step after reading this guide.</p>
+
+<div class="page-break"></div>
 
 <!-- 3.2 Section 2 - Getting Started -->
 <h2>Getting Started</h2>
@@ -347,8 +347,6 @@ class handlers extends Paged.Handler {
 <div class="banner-class">
 	ASDF
 </div>
-
-<div class="page-break"></div>
 
 <!-- 4.0 MathJax Add-on
 <script>
