--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="counter-reset"></div>
 
 <!-- 3.1 Section 1 - Foreword -->
-<h2 class="no-break">Foreword</h2>
+<h2 class="no-break top">Foreword</h2>
 
 <p>HTML and CSS are beautiful languages and one of the landmark achievements of collaboration and the open web. Together, they allow you to create beautifully typeset digital content that can be viewed on any device, without any special software or paid licenses.</p>
 
