--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
 .page-break { break-after: page; }
 </pre></code>
 
-<p>We then simply have to add an empty page-break div in HTML at the points we want a page break:</p>
+<p>We then simply have to add an empty div in HTML at the points we want a page break:</p>
 
 <code><pre>
 &lt;div class="page-break"&gt;&lt;/div&gt;
 </pre></code>
 
-<p>Similarly, we could automatically force a page break before every h2 tag with the following (which also gives us the opportunity to avoid this behaviour by attaching the 'no-break' class to a h2 header we do not want to auto-break):</p>
+<p>Similarly, we could automatically force a page break before every &lt;h2&gt; tag with the following (which also gives us the opportunity to avoid this behaviour by attaching the <light-mark>no-break</light-mark> class to a &lt;h2&gt; header we do not want to auto-break):</p>
 
 <code><pre>
 h2:not(.no-break) { break-before: page; }
@@ -143,9 +143,7 @@ h2:not(.no-break) { break-before: page; }
 <p>We can use CSS counters to add page numbers. The below CSS will add a page number to the bottom right of every page.</p>
 
 <code><pre>
-@page {
-  	@bottom-right { content: counter(page); }
-}
+@page {	@bottom-right { content: counter(page); } }
 </pre></code>
 
 
