--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="page-break"></div>
 
 <!-- 3.2 Section 2 - Getting Started -->
-<h2>Getting Started</h2>
+<h2 class="top">Getting Started</h2>
 
 <h3>Installation</h3>
 <p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either by hosting it locally or linking to it directly:</p>
