--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ h2:not(.no-break) { break-before: page; }
 </pre></code>
 
 
-<h3>Basic Headers & Footers</h3>
-<p>The preceding page number example gives us a sneak peek into how we could add headers and footers. We can add these in six locations - top-left, top-center, top-right, bottom-left, bottom-center and of course bottom-right as before. Below are some basic examples of simple headers & footers, with the second example showing how we can increase the width in case we need to.</p>
+<h3>Headers & Footers</h3>
+<p>The preceding page number example gives us a sneak peek into how we could add headers and footers. We can add these in six locations - <light-mark>top-left</light-mark>, <light-mark>top-center</light-mark>, <light-mark>top-right</light-mark>, <light-mark>bottom-left</light-mark>, <light-mark>bottom-center and of course <light-mark>bottom-right</light-mark> as before. Below are some basic examples of simple headers & footers, with the second example showing how we can increase the width in case we need to.</p>
 
 <code><pre>
 @page {
