--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@ h2:not(.no-break) { break-before: page; }
 }
 </pre></code>
 
-<h2>Advanced Features</h2>
+
+<div class="page-break"></div>
+
+<h2 class="top">Advanced Features</h2>
 
 <h3>Automatic Counters</h3>
 <p>One useful feature is to automatically number sections and figures. To achieve this, first define the class <light-mark>no-counter</light-mark> as a general class to allow us to manually exclude a section or figure from the numbering. Subsequently, we can generate the counters as follows, noting that the subsection and figure counters reset at every new instance of a section.</p>
