--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@ class handlers extends Paged.Handler {
 </figure>
 
 <div class="banner-class">
-	ASDF
+<h3>Banners</h3>
+<p>We can also create banners at the top or bottom of our pages with some more advanced CSS.</p>
 </div>
 
 <!-- 4.0 MathJax Add-on
