--- a/index.html
+++ b/index.html
@@ -164,9 +164,6 @@ h2:not(.no-break) { break-before: page; }
 }
 </pre></code>
 
-
-<div class="page-break"></div>
-
 <h2 class="top">Advanced Features</h2>
 
 <h3>Automatic Counters</h3>
@@ -201,6 +198,11 @@ figure:not(.no-counter) {
 </pre></code>
 
 <p>We can then take this one step further and use CSS to automatically generate text labels to reflect the counters within our sections and figures.</p>
+
+<br /><br />
+<p style="text-align: right"><i>Continues on following page</i></p>
+
+<div class="page-break"></div>
 
 <figure>
 <figcaption>Code to Auto-Generate Numbering Labels</figcaption>
