--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 
-<h2>Basic Features</h2>
+<h2 class="no-break">Basic Features</h2>
 
 
 <h3>Page Size</h3>
@@ -164,7 +164,7 @@ h2:not(.no-break) { break-before: page; }
 }
 </pre></code>
 
-<h2 class="top">Advanced Features</h2>
+<h2>Advanced Features</h2>
 
 <h3>Automatic Counters</h3>
 <p>One useful feature is to automatically number sections and figures. We achieve this with the following, noting that we use the class <light-mark>no-counter</light-mark> as a general class to manually exclude a section or figure from the numbering. Note that the subsection and figure counters reset at every new instance of a section.</p>
