--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@ class handlers extends Paged.Handler {
 
 <figure>
 <figcaption>Screenshot of Print Settings in Safari</figcaption>
-<img src="safari.png" />
+<img src="safari.png" class="img-100mm" />
 </figure>
 
 <figure>
 <figcaption>Screenshot of Print Settings in Chrome</figcaption>
-<img src="chrome.png" />
+<img src="chrome.png" class="img-100mm" />
 </figure>
 
 <div class="banner-class">
