--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <p>This guide provides a basic tutorial to using paged.js, for my own future reference and yours, and I highly recommend you visiting their site and supporting their project. In particular, their <a href="https://www.pagedjs.org/documentation/05-designing-for-print/">documentation</a> covers many aspects of advanced paged media and is a worthwhile next step after reading this guide.</p>
 
-<br /><br />
+<br /><br /><br /><br /><br /><br /><br /><br />
 <p style="text-align: right"><i>Guide begins on following page</i></p>
 
 <div class="page-break"></div>
@@ -67,7 +67,7 @@
 <h2 class="top">Getting Started</h2>
 
 <h3>Installation</h3>
-<p>There are three elements to producing PDFs from HTML through paged.js. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either by hosting it locally or linking to it directly:</p>
+<p>There are three elements to producing PDFs from HTML through <light-mark>paged.js</light-mark>. First, you will need to load the <a href="https://www.pagedjs.org/documentation/releases/">paged.polyfill.js</a> library either by hosting it locally or linking to it directly:</p>
 
 <code><pre>
 &lt;script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"&gt;&lt;/script&gt;
@@ -79,7 +79,7 @@
 
 
 <h3>Alternate (easier) Installation</h3>
-<p>As an easier alternative, simply clone my <a href="https://github.com/ashok-khanna/pdf">example repo</a> (and set up GitHub Pages for the cloned repo) and then read through style.css and index.html to understand how it works. The rest of this guide takes you through the code example in my repo.</p>
+<p>As an easier alternative, simply clone my <a href="https://github.com/ashok-khanna/pdf">example repo</a> (and set up GitHub Pages for the cloned repo) and then read through <light-mark>style.css</light-mark> and <light-mark>index.html</light-mark> to understand how it works. The rest of this guide takes you through the code example in my repo.</p>
 
 <h3>Media Queries</h3>
 
