--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ h2:not(.no-break) { break-before: page; }
 	}
 
   	@bottom-left {
-  		content: "Beautiful PDFs from HTML";
-     	width: 40mm
+		content: "Beautiful PDFs from HTML";
+		width: 40mm
     }
 }
 </pre></code>
@@ -167,7 +167,7 @@ h2:not(.no-break) { break-before: page; }
 <h2>Advanced Features</h2>
 
 <h3>Automatic Counters</h3>
-<p>One useful feature is to automatically number sections and figures. We achieve this with the following, noting that we use the class <light-mark>no-counter</light-mark> as a general class to manually exclude a section or figure from the numbering. Note that the subsection and figure counters reset at every new instance of a section.</p>
+<p>One useful feature is to automatically number sections and figures. We achieve this with the following, noting that we use the class <light-mark>no-counter</light-mark> as a general class to manually exclude a section or figure from the numbering. Note that the subsection and figure counters below reset at every new instance of a section.</p>
 
 <code><pre>
 body {
@@ -199,7 +199,7 @@ figure:not(.no-counter) {
 
 <p>We can then take this one step further and use CSS to automatically generate text labels to reflect the counters within our sections and figures.</p>
 
-<br /><br />
+<br /><br /><br /><br />
 <p style="text-align: right"><i>Continues on following page</i></p>
 
 <div class="page-break"></div>
