--- a/index.html
+++ b/index.html
@@ -329,6 +329,8 @@ class handlers extends Paged.Handler {
 
 <p>You can export your file to PDF using the browser's <light-mark>file > print</light-mark> option (selecting pdf as the printer). You want to select the print background option and delect the print headers & footers option.</p>
 
+<div class="page-break"></div>
+
 <figure>
 <figcaption>Screenshot of Print Settings in Safari</figcaption>
 <img src="safari.png" class="img-100mm" />
